tests/valid/luaTruthinessNaN.ts
// @ts-nocheck
const num = 5;
if (num) {
	console.log(num);
}
