tests/invalid/noLabels.ts
// @ts-nocheck
outer: for (let i = 0; i < 10; i++) {
	break outer;
}
